View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0031219 | Open CASCADE | OCCT:Application Framework | public | 2019-12-04 17:09 | 2020-12-02 17:12 |
Reporter | oan | Assigned To | bugmaster | ||
Priority | normal | Severity | tweak | ||
Status | closed | Resolution | fixed | ||
Target Version | 7.5.0 | Fixed in Version | 7.5.0 | ||
Summary | 0031219: Application Framework - TObj_Object::SetName(const Standard_CString theName) should use conversion to TCollection_HAsciiString | ||||
Description | TObj_Object::SetName(const Standard_CString theName) should use conversion to TCollection_HAsciiString instead of direct conversion to TCollection_HExtendedString to avoid possible problems with Unicode symbols. | ||||
Steps To Reproduce | There is not possible reproduce from Test Harness | ||||
Tags | No tags attached. | ||||
Test case number | Not required | ||||
|
Results of tests can be found by path: http://jenkins-test-12.nnov.opencascade.com/view/CR31452_1-master-gka/view/COMPARE/ |
|
Please, improve the creation of Handles in two last SetName methods in TObj_Object class. The first two methods take references to Handles (like the first : const Handle(TCollection_HAsciiString)& theName), so, creation of Handles "on the fly" for this argument could produce warnings or invalid memory management on some systems. |
|
Branch CR31219_1 has been created by gka. SHA-1: 7a8ccaaa83c87dcb1ef49ba68d7a1448313bad9a Detailed log of new commits: Author: gka Date: Fri Sep 11 20:52:42 2020 +0300 0031219: TObj_Object::SetName(const Standard_CString theName) should use conversion to TCollection_HAsciiString In the method TObj_Object::TObj_Object::SetName(const Standard_CString theName) conversion to the HAsciiString was used instead of the conversion to the TCollection_HExtendedString. Author: gka Date: Mon Dec 9 14:43:47 2019 +0300 0031219: TObj_Object::SetName(const Standard_CString theName) should use conversion to TCollection_HAsciiString In the method TObj_Object::TObj_Object::SetName(const Standard_CString theName) conversion to the HAsciiString was used instead of the conversion to the TCollection_HExtendedString. |
|
Branch CR31219_1 has been updated forcibly by gka. SHA-1: f7b5e6e59d1adcd46baf58aff19725f329bfd5f8 |
|
Mikhail, can you please provide example of warnings you mentioned in 0031219:0094506? |
|
It is the same for VC9, VC10 or VC11: Message : opencascade::handle<T>::operator opencascade::handle<T> &: Passing non-const reference to handle of base type in function is unsafe; use variable of exact type |
|
Please see results of tests by path: http://jenkins-test-12.nnov.opencascade.com/view/CR31219_1-master-gka/view/COMPARE/ |
|
Branch CR31219_1 is ready to be reviewed. |
|
Reviewed OCCT branch: CR31219_1 Products branch: NOTHING |
|
Branch CR31219_1 has been updated forcibly by gka. SHA-1: 8750b000185a102a9df10cecfdf01730e3117129 |
|
Branch CR31219_1 is ready to be reviewed |
|
Reviewed |
|
Combination - OCCT branch : IR-2020-09-18 master SHA - b0b766826118f74b9857a932b8cec8c52a25c492 a206de37fbfa0bf71bd534ae47192bbec23b8522 Products branch : IR-2020-09-18 SHA - a6486d839da1ba1383ef6cc1a1a446a172f494c7 was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian80-64: OCCT Total CPU difference: 17528.97000000011 / 17378.390000000145 [+0.87%] Products Total CPU difference: 12127.32000000009 / 12079.540000000095 [+0.40%] Windows-64-VC14: OCCT Total CPU difference: 18862.703125 / 18898.921875 [-0.19%] Products Total CPU difference: 13314.828125 / 13329.21875 [-0.11%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
|
Branch CR31219_1 has been deleted by inv. SHA-1: 8750b000185a102a9df10cecfdf01730e3117129 |
occt: master 8b77b2fc 2019-12-09 11:43:47
Committer: bugmaster Details Diff |
0031219: Application Framework - TObj_Object::SetName(const Standard_CString theName) should use conversion to TCollection_HAsciiString In the method TObj_Object::TObj_Object::SetName(const Standard_CString theName) conversion to the HAsciiString was used instead of the conversion to the TCollection_HExtendedString. - |
Affected Issues 0031219 |
|
mod - src/TObj/TObj_Object.cxx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2019-12-04 17:09 | oan | New Issue | |
2019-12-04 17:09 | oan | Assigned To | => mpv |
2019-12-06 11:43 |
|
Assigned To | mpv => gka |
2019-12-09 15:12 |
|
Status | new => assigned |
2020-09-11 15:32 |
|
Target Version | 7.5.0 => 7.6.0 |
2020-09-11 15:53 |
|
Note Added: 0094470 | |
2020-09-11 15:58 |
|
Assigned To | gka => mpv |
2020-09-11 15:58 |
|
Status | assigned => resolved |
2020-09-11 15:58 |
|
Steps to Reproduce Updated | |
2020-09-11 16:08 |
|
Target Version | 7.6.0 => 7.5.0 |
2020-09-11 18:30 |
|
Note Added: 0094506 | |
2020-09-11 18:30 |
|
Assigned To | mpv => gka |
2020-09-11 18:30 |
|
Status | resolved => assigned |
2020-09-11 19:26 |
|
Target Version | 7.5.0 => 7.6.0 |
2020-09-11 20:50 | git | Note Added: 0094521 | |
2020-09-14 10:37 | git | Note Added: 0094696 | |
2020-09-14 11:19 |
|
Note Added: 0094703 | |
2020-09-14 11:30 |
|
Note Added: 0094706 | |
2020-09-14 13:24 |
|
Note Added: 0094717 | |
2020-09-14 13:26 |
|
Note Added: 0094718 | |
2020-09-14 13:26 |
|
Assigned To | gka => mpv |
2020-09-14 13:26 |
|
Status | assigned => resolved |
2020-09-14 15:51 |
|
Note Added: 0094740 | |
2020-09-14 15:51 |
|
Assigned To | mpv => bugmaster |
2020-09-14 15:51 |
|
Status | resolved => reviewed |
2020-09-14 17:25 | git | Note Added: 0094762 | |
2020-09-14 17:30 |
|
Note Added: 0094763 | |
2020-09-14 17:50 |
|
Note Added: 0094764 | |
2020-09-15 17:25 | bugmaster | Target Version | 7.6.0 => 7.5.0 |
2020-09-18 17:42 | bugmaster | Summary | TObj_Object::SetName(const Standard_CString theName) should use conversion to TCollection_HAsciiString => Application Framework - TObj_Object::SetName(const Standard_CString theName) should use conversion to TCollection_HAsciiString |
2020-09-19 15:54 | bugmaster | Test case number | => Not required |
2020-09-19 17:24 | bugmaster | Note Added: 0095093 | |
2020-09-19 17:24 | bugmaster | Status | reviewed => tested |
2020-09-20 10:55 | bugmaster | Changeset attached | => occt master 8b77b2fc |
2020-09-20 10:55 | bugmaster | Status | tested => verified |
2020-09-20 10:55 | bugmaster | Resolution | open => fixed |
2020-09-20 11:14 | git | Note Added: 0095126 | |
2020-12-02 16:41 |
|
Fixed in Version | => 7.5.0 |
2020-12-02 17:12 |
|
Status | verified => closed |